bench/conf/envoy.yaml
# Envoy as a plain HTTP reverse proxy: one listener, one route, one cluster, no access log. Run with --concurrency 1.
static_resources:
  listeners:
  - name: l
    address: { socket_address: { address: 127.0.0.1, port_value: @PORT@ } }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: b
          route_config:
            name: r
            virtual_hosts:
            - name: all
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: up, timeout: 60s }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: up
    connect_timeout: 5s
    type: STATIC
    load_assignment:
      cluster_name: up
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: 127.0.0.1, port_value: @UP@ } }
